--- a/projects/state-machine-drawing/css/index.css
+++ b/projects/state-machine-drawing/css/index.css
@@ -310,7 +310,8 @@ hr{
     background-color: var(--accent-color);
 }
 
-.input-sequence{
+.input-sequence,
+.output{
     width: 100%;
     height: 100%;
     padding: 0px 10px;
@@ -324,6 +325,10 @@ hr{
     align-items: center;
     color: white;
     font-size: 14px;
+}
+
+.output{
+    margin-top: 10px;
 }
 
 canvas{
