--- a/projects/b-tree-visualizer/css/index.css
+++ b/projects/b-tree-visualizer/css/index.css
@@ -121,7 +121,7 @@ body,html{
 #insert{
     width: 100%;
     height: 30px;
-    background-color: #101010;
+    background-color: #202020;
     border-radius: 4px;
     border:none;
     color:white;
@@ -129,6 +129,23 @@ body,html{
     outline: none;
     padding: 0 5px;
 }
+
+.insert-btn{
+    background-color: var(--accent-color);
+    width: 100%;
+    height: 30px;
+    border-radius: 4px;
+    margin-top: 10px;
+    color:white;
+    padding: 2px 10px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    will-change: transform;
+    transition: all .15s ease;
+}
+
 
 hr{
     width: 100%;
