--- a/projects/b-tree-visualizer/css/index.css
+++ b/projects/b-tree-visualizer/css/index.css
@@ -118,7 +118,8 @@ body,html{
     background-color: var(--accent-color);
 }
 
-#insert{
+#insert,
+#size-select{
     width: 100%;
     height: 30px;
     background-color: #202020;
