--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,1 +1,12 @@
 @import url(https://db.onlinewebfonts.com/c/88c7cb10b703e0d8910b82df15e0cde5?family=Segoe+WP);
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@font-face {
+    font-family: 'segoe_wpc.ttf';
+    src: url(../fonts/segoe_wpc.ttf);
+}
+
+@font-face {
+    font-family: 'nunito-semi-bold-italic.ttf';
+    src: url(../fonts/nunito-semi-bold-italic.ttf);
+}
