--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    user-select: none; /* tesst */
 }
 
 html,body{
@@ -39,19 +40,33 @@ html,body{
     width: var(--side-bar-width);
     background-color: var(--side-bar-bg);
     border-right: 1px solid var(--side-bar-border-color);
+    overflow: auto;
 }
+
+.content .side-bar::-webkit-scrollbar{width: 14px;height: 14px;}
+.content .side-bar::-webkit-scrollbar-track{background-color: transparent;}
+.content .side-bar::-webkit-scrollbar-thumb{background-color: var(--editor-scrollbar-thumb-bg);}
+.content .side-bar::-webkit-scrollbar-thumb:hover{background-color: var(--editor-scrollbar-thumb-hover-bg);}
+.content .side-bar::-webkit-scrollbar-thumb:active{background-color: var(--editor-scrollbar-thumb-active-bg);}
+.content .side-bar::-webkit-scrollbar-corner{background-color: transparent;}
 
 .content .side-bar .header{
     width: 100%;
     height: 35px;
-    padding: 0 8px;
     display:flex;
     justify-content: space-between;
     align-items: center;
+    position: sticky;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: var(--side-bar-bg);
+    border-bottom: 1px solid var(--side-bar-border-color);
 }
 
 .content .side-bar .header .title{
-    padding-left: 12px;
+    padding-left: 20px;
     line-height: 35px;
     white-space: nowrap;
     overflow: hidden;
@@ -67,7 +82,7 @@ html,body{
     font-size: 16px;
     width: 22px;
     height: 22px;
-    margin-right: 4px;
+    margin-right: 12px;
     background-color: transparent;
     border-radius: 4px;
     display:flex;
@@ -97,6 +112,12 @@ html,body{
     font-size: 16px;
     color: var(--icon-foreground);
     pointer-events: none;
+    transform: rotate(-90deg);
+    transition: transform .1s ease !important;
+}
+
+.content .side-bar .pane[data-expanded="true"] .pane-header .icon{
+    transform: rotate(0deg);
 }
 
 .content .side-bar .pane .pane-header .title{
@@ -138,6 +159,10 @@ html,body{
     padding-left: 22px;
     cursor: pointer;
     transition: background-color .1s ease;
+}
+
+.content .side-bar .pane .pane-content[data-category="explorer"] .pane-item{
+    padding-left: 12px !important;
 }
 
 .content .side-bar .pane .pane-content .pane-item.active{
@@ -187,17 +212,17 @@ html,body{
 
 .content .side-bar .pane .pane-item-children.layer-1.expanded::after{
     background-color: var(--side-bar-directory-line-layer-1);
-    left: 32px;
+    left: 22px;
 }
 
 .content .side-bar .pane .pane-item-children.layer-2.expanded::after{
     background-color: var(--side-bar-directory-line-layer-2);
-    left: 44px;
+    left: 34px;
 }
 
 .content .side-bar .pane .pane-item-children.layer-3.expanded::after{
     background-color: var(--side-bar-directory-line-layer-3);
-    left: 58px;
+    left: 46px;
 }
 
 .content .side-bar .pane .pane-content .pane-item .arrow{
@@ -206,7 +231,7 @@ html,body{
 
 .content .side-bar .pane .pane-content .pane-item .arrow i{
     transform: rotate(-90deg);
-    transition: transform .1s ease !important;
+    transition: transform .1s ease, color .1s ease !important;
     will-change: transform;
 }
 
@@ -214,7 +239,7 @@ html,body{
     transform: rotate(0deg);
 }
 
-.content .side-bar .pane .pane-content .pane-item:hover .close-action{
+.content .side-bar .pane .pane-content .pane-item.active:hover .close-action{
     opacity: 1;
     pointer-events: all;
 }
@@ -222,12 +247,8 @@ html,body{
 .content .side-bar .pane .pane-content .pane-item .close-action i,
 .content .side-bar .pane .pane-content .pane-item .arrow i{
     color: var(--icon-foreground);
-    transition: color .1s ease;
+    transition: transform .1s ease, color .1s ease !important;
     pointer-events: none;
-}
-
-.content .side-bar .pane .pane-content .pane-item .arrow i{
-    transition: none !important;
 }
 
 .content .side-bar .pane .pane-content .pane-item:hover .close-action:hover i{
@@ -252,8 +273,289 @@ html,body{
 
 .content .editor{
     flex: 1;
+    max-width: calc(100% - var(--side-bar-width) - var(--activity-bar-width));
     height: 100%;
     background-color: var(--editor-bg);
+    display:flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    overflow: hidden;
+    position: relative;
+}
+
+.content .editor .top-bar{
+    width: max-content;
+    min-width: 100%;
+    height: var(--editor-top-bar-height);
+    border-bottom: 2px solid var(--editor-top-bar-border-color);
+    background-color: var(--editor-top-bar-bg);
+    display:flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-shrink: 0;
+    transition: transform .1s ease;
+}
+
+.content .editor .scroll-buttons{
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: var(--editor-top-bar-height);
+    background: linear-gradient(to right, rgba(0,0,0,0), var(--editor-top-bar-bg), var(--editor-top-bar-bg), var(--editor-top-bar-bg));
+    width: fit-content;
+    padding: 0 5px;
+    opacity: 0;
+    pointer-events: none;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity .2s ease;
+    z-index: 2;
+    border-bottom: 2px solid var(--editor-top-bar-border-color);
+}
+
+.content .editor .scroll-buttons .icon{
+    width: calc(var(--editor-top-bar-height) - 10px);
+    aspect-ratio: 1;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    color: var(--icon-foreground);
+    transition: background-color .2s ease;
+    border-radius: 4px;
+    cursor: pointer;
+    pointer-events: all;
+}
+
+.content .editor .scroll-buttons .icon:hover{
+    background-color: var(--icon-foreground-hover-bg);
+}
+
+.content .editor .scroll-buttons .icon:first-child{
+    margin-left: 25px;
+    margin-right: 5px;
+}
+
+.content .editor.topbar-overflowing .scroll-buttons{
+    opacity: 1;
+    pointer-events: all;
+}
+
+.content .editor .top-bar::-webkit-scrollbar{height: 0px;}
+
+.content .editor .top-bar .file-item{
+    width: fit-content;
+    height: 100%;
+    display:flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 10px;
+    padding-right: 15px;
+    background-color: var(--editor-top-bar-item-bg);
+    border-right: 1px solid var(--editor-top-bar-item-border-color);
+    border-top: 0px solid transparent;
+    border-bottom: 1px solid transparent;
+    cursor: pointer;
+    flex-shrink: 0;
+}
+
+.content .editor .top-bar .file-item.active{
+    box-sizing: content-box;
+    border-top: 1px solid var(--editor-top-bar-item-active-border-color);
+    border-bottom: 3px solid var(--editor-bg);
+    background-color: var(--editor-bg);
+}
+
+.content .editor .top-bar .file-item .icon{
+    margin-right: 6px;
+    max-width: 16px;
+    max-height: 22px;
+    object-fit: contain;
+    flex-shrink: 0;
+    pointer-events: none;
+}
+
+.content .editor .top-bar .file-item .name{
+    flex-shrink: 0;
+    color: var(--editor-top-bar-item-color);
+    font-family: 'Segoe WP';
+    line-height: var(--editor-top-bar-height);
+    font-size: 13px;
+    pointer-events: none;
+}
+
+.content .editor .top-bar .file-item .close-action{
+    height: 22px;
+    width: 22px;
+    margin: 0 4px;
+    flex-shrink: 0;
+    background-color: transparent;
+    border-radius: 4px;
+    opacity: 0;
+    transition: background-color .1s ease, opacity .1s ease;
+}
+
+.content .editor .top-bar .file-item[data-close="false"] .close-action,
+.content .pane-item[data-close="false"] .close-action{
+    pointer-events: none !important;
+    opacity: 0 !important;
+}
+
+.content .editor .top-bar .file-item:hover .close-action{
+    opacity: 1;
+}
+
+.content .editor .top-bar .file-item .close-action:hover{
+    background-color: var(--icon-foreground-hover-bg);
+}
+
+.content .editor .top-bar .file-item .close-action i{
+    height: 22px;
+    width: 22px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--icon-foreground);
+    pointer-events: none;
+}
+
+.content .editor .content{
+    padding: 5px 0px;
+    max-width: 100%;
+    flex: 1;
+    overflow: auto;
+    position: relative;
+    transition: opacity .1s ease;
+    display: block !important;
+}
+
+.content .editor .content.hidden{
+    opacity: 0;
+}
+
+.content .editor .content *{
+    user-select: text !important;
+}
+
+.content .editor .content::-webkit-scrollbar{width: 14px;height: 14px;}
+.content .editor .content::-webkit-scrollbar-track{background-color: transparent;}
+.content .editor .content::-webkit-scrollbar-thumb{background-color: var(--editor-scrollbar-thumb-bg);}
+.content .editor .content::-webkit-scrollbar-thumb:hover{background-color: var(--editor-scrollbar-thumb-hover-bg);}
+.content .editor .content::-webkit-scrollbar-thumb:active{background-color: var(--editor-scrollbar-thumb-active-bg);}
+.content .editor .content::-webkit-scrollbar-corner{background-color: transparent;}
+
+.content .editor .content .hljs-ln-code{
+    padding-left: 20px;
+}
+
+.content .editor .content .hljs-ln-numbers{
+    padding-left: 5px;
+    text-align: right;
+}
+
+.content .editor .content .symbols{
+    width: 100%;
+    height: fit-content;
+    padding: 5px;
+}
+
+.content .editor .content.image{
+    display:flex !important;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: calc(100% - var(--editor-top-bar-height));
+}
+
+.content .editor .content.image img{
+    max-width: 95%;
+    max-height: 95%;
+    object-fit: contain;
+}
+
+.content .editor .content.font .title{
+    padding-left: 5px;
+    font-family: 'Segoe WP';
+    font-size: 15px;
+    width: max-content;
+}
+
+.content .editor .content.font .sentence{
+    padding-left: 5px;
+    margin-top: 5px;
+    display:flex;
+    width: max-content;
+    justify-content: flex-start;
+    align-items: flex-start;
+    font-family: 'Segoe WP';
+}
+
+.content .editor .content.font .sentence:last-child{
+    padding-bottom: 5px;
+    border-bottom: 1px solid var(--side-bar-border-color);
+}
+
+.content .editor .content.font .sentence .font-size{
+    font-size: 12px;
+    line-height: 12px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 15px;
+}
+
+.content .editor .content.font .sentence .string{
+    white-space: nowrap;
+}
+
+.content .editor .svg-preview{
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+    border-top: 1px solid var(--side-bar-border-color);
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transition: opacity .1s ease;
+}
+
+.content .editor .svg-preview.hidden{
+    opacity: 0;
+}
+
+.content .editor .svg-preview .title{
+    width: 100%;
+    font-family: 'Segoe WP';
+    font-weight: bold;
+    font-size: 13px;
+    color: var(--side-bar-color);
+    height: var(--side-bar-pane-header-height);
+    display:flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 5px;
+    background-color: var(--editor-top-bar-bg);
+    border-bottom: 1px solid var(--side-bar-border-color);
+    flex-shrink: 0;
+}
+
+.content .editor .svg-preview .image-wrapper{
+    width: 100%;
+    height: calc(100% - var(--side-bar-pane-header-height));
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content .editor .svg-preview .image-wrapper img{
+    max-width: 95%;
+    max-height: 95%;
+    object-fit: contain;
 }
 
 .status-bar{
