--- a/projects/jigsaw-puzzle/css/index.css
+++ b/projects/jigsaw-puzzle/css/index.css
@@ -30,135 +30,84 @@ body{
 }
 
 #original-image{
+    display:none;
     position: absolute;
     inset: 0;
-    display:none;
     margin: auto;
-    max-width: 80%;
-    max-height: 80%;
+    max-width: 50%;
+    max-height: 50%;
     object-fit: contain;
     z-index: 1;
     pointer-events: none;
-    transition: all .2s ease;
-}
-
-#original-image.hidden{
-    opacity: 0;
 }
 
 #canvas{
-    position: fixed;
-    z-index: 50;
+    z-index: 5;
     width: 100% !important;
     height: 100% !important;
 }
 
 .controls{
-    width: 80vh;
-    height: 60px;
+    width: 100%;
+    height: 50px;
     position: fixed;
     left: 0;
     top: 0;
     right: 0;
-    z-index: 100;
-    margin: auto;
+    z-index: 20;
     background-color: #353535;
-    border-radius: 0px 0px 6px 6px;
     box-shadow: 0 0 16px 2px rgba(0,0,0,.15);
     display:flex;
     justify-content: flex-start;
     align-items: center;
-    padding: 0 5px;
+    padding: 0 10px;
 }
 
-.controls .piece-select{
-    width: 270px;
-    height: 50px;
-    background-color: #000;
-    border-radius: 6px;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-}
-
-.controls .piece-select div{
-    flex: 1;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 100%;
-    cursor: pointer;
-}
-
-.controls .piece-select div.selected{
-    background-color: green;
-}
-
-.controls .piece-select div img{
-    height: 20px;
-    width: 20px;
-    object-fit: contain;
-    pointer-events: none;
-}
-.controls .piece-select div span{
-    font-size: 12px;
-    color:white;
-    font-weight: 300;
-    pointer-events: none;
-}
-
-.setup{
-    position: fixed;
-    inset: 0;
-    margin: auto;
-    width: 300px;
-    height: 120px;
-    background-color: #909090;
-    border-radius: 4px;
-    padding: 10px;
-    transition: all .2s ease;
-    z-index: 100;
-}
-
-.setup.hidden{
-    opacity: 0;
-    pointer-events: none;
-}
-
-.setup input[type="file"]{
-    width: 100%;
-    margin-bottom: 10px;
-    color:white;
-    background-color: #505050;
-    border-radius: 4px;
-}
-
-.setup #puzzle-rows{
+.controls .solve-btn,
+.controls .mix-btn{
+    width: 75px;
+    height: 30px;
     margin-right: 10px;
-}
-
-.setup input[type="number"]{
-    width: calc(50% - 5px);
-    float:left;
-    margin-bottom: 10px;
-    color:white;
-    background-color: #505050;
-    border:none;
-    outline:none;
-    border-radius: 4px;
-}
-
-.setup .create-btn{
-    clear: both;
+    font-family: 'Poppins',sans-serif;
     background-color: green;
     color:white;
-    margin-right: auto;
-    margin-left: auto;
-    padding: 2px 10px;
+    font-weight: bold;
     border-radius: 4px;
-    height: 25px;
-    text-align: center;
-    font-size: 14px;
+    cursor: pointer;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+}
+
+.controls select{
+    width: 200px;
+    height: 30px;
+    margin-right: 10px;
+    font-family: 'Poppins',sans-serif;
+    background-color: #000;
+    color:white;
+    font-weight: bold;
+    border-radius: 4px;
+    cursor: pointer;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border: none;
+    outline: none;
+}
+
+.controls .divider{
+    margin-right: 10px;
+    width: 2px;
+    height: calc(100% - 20px);
+    background-color: #707070;
+}
+
+.controls span{
+    color: #fff;
+    font-size: 16px;
+    font-weight: normal;
+    margin-right: 10px;
 }
